objects/ASI_CRM_WS_Target__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_April__c</fullName>
        <label>April</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_August__c</fullName>
        <label>August</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Period_End_Date__c</fullName>
        <formula>if (ispickval(  ASI_CRM_Quarter__c , &apos;Q1 (Jul - Sept)&apos;), DATE( Value(LEFT(TEXT(ASI_CRM_Fiscal_Year__c ), 4)), 9, 30),
IF(
ispickval(  ASI_CRM_Quarter__c , &apos;Q2 (Oct - Dec)&apos;), DATE( value( LEFT(TEXT(ASI_CRM_Fiscal_Year__c) , 4)), 12, 31),IF(
ispickval(  ASI_CRM_Quarter__c , &apos;Q3 (Jan - Mar)&apos;), DATE( value(RIGHT(TEXT(ASI_CRM_Fiscal_Year__c) , 4)), 3, 31),IF(
ispickval(  ASI_CRM_Quarter__c , &apos;Q4 (Apr - Jun)&apos;), DATE( value(RIGHT(TEXT(ASI_CRM_Fiscal_Year__c ), 4)), 6, 30),TODAY()
  ) )
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Period_Start_Date__c</fullName>
        <formula>if (ispickval( ASI_CRM_Quarter__c , &apos;Q1 (Jul - Sept)&apos;), DATE( Value(LEFT(TEXT(ASI_CRM_Fiscal_Year__c ), 4)), 7, 1), 
IF( 
ispickval( ASI_CRM_Quarter__c , &apos;Q2 (Oct - Dec)&apos;), DATE( value( LEFT(TEXT(ASI_CRM_Fiscal_Year__c) , 4)), 10, 1),IF( 
ispickval( ASI_CRM_Quarter__c , &apos;Q3 (Jan - Mar)&apos;), DATE( value(RIGHT(TEXT(ASI_CRM_Fiscal_Year__c) , 4)), 1, 1),IF( 
ispickval( ASI_CRM_Quarter__c , &apos;Q4 (Apr - Jun)&apos;), DATE( value(RIGHT(TEXT(ASI_CRM_Fiscal_Year__c ), 4)), 4, 1),TODAY() 
) ) 
) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_December__c</fullName>
        <label>December</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_February__c</fullName>
        <label>February</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013/2014</fullName>
                </value>
                <value>
                    <fullName>2014/2015</fullName>
                </value>
                <value>
                    <fullName>2015/2016</fullName>
                </value>
                <value>
                    <fullName>2016/2017</fullName>
                </value>
                <value>
                    <fullName>2017/2018</fullName>
                </value>
                <value>
                    <fullName>2018/2019</fullName>
                </value>
                <value>
                    <fullName>2019/2020</fullName>
                </value>
                <value>
                    <fullName>2020/2021</fullName>
                </value>
                <value>
                    <fullName>2021/2022</fullName>
                </value>
                <value>
                    <fullName>2022/2023</fullName>
                </value>
                <value>
                    <fullName>2023/2024</fullName>
                </value>
                <value>
                    <fullName>2024/2025</fullName>
                </value>
                <value>
                    <fullName>2025/2026</fullName>
                </value>
                <value>
                    <fullName>2026/2027</fullName>
                </value>
                <value>
                    <fullName>2027/2028</fullName>
                </value>
                <value>
                    <fullName>2028/2029</fullName>
                </value>
                <value>
                    <fullName>2029/2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_GS_Target__c</fullName>
        <label>GS. Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_January__c</fullName>
        <label>January</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_July__c</fullName>
        <label>July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_June__c</fullName>
        <label>June</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_March__c</fullName>
        <label>March</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_May__c</fullName>
        <label>May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_November__c</fullName>
        <label>November</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_October__c</fullName>
        <label>October</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1 (Jul - Sept)</fullName>
                </value>
                <value>
                    <fullName>Q2 (Oct - Dec)</fullName>
                </value>
                <value>
                    <fullName>Q3 (Jan - Mar)</fullName>
                </value>
                <value>
                    <fullName>Q4 (Apr - Jun)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>WS Target</relationshipLabel>
        <relationshipName>WS_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Team__c</fullName>
        <formula>TEXT(Owner:User.ASI_CRM_Sales_Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_September__c</fullName>
        <label>September</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_Sub_brand__r.Name</formula>
        <label>Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_WS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>T2 WS</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total__c</fullName>
        <formula>ASI_CRM_January__c + 
ASI_CRM_February__c + 
ASI_CRM_March__c + 
ASI_CRM_April__c + 
ASI_CRM_May__c + 
ASI_CRM_June__c + 
ASI_CRM_July__c + 
ASI_CRM_August__c + 
ASI_CRM_September__c + 
ASI_CRM_October__c + 
ASI_CRM_November__c + 
ASI_CRM_December__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Vol_Target__c</fullName>
        <label>Vol. Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <formula>TEXT(YEAR(ASI_CRM_MY_TargetDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>WS Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_T2_WS__c</columns>
        <columns>ASI_CRM_Fiscal_Year__c</columns>
        <columns>ASI_CRM_Quarter__c</columns>
        <columns>ASI_CRM_GS_Target__c</columns>
        <columns>ASI_CRM_Vol_Target__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_WS_Target__c.ASI_CRM_CN_WS_Target</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WS_Forecast_MY</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_T2_WS__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_MY_TargetDate__c</columns>
        <columns>ASI_CRM_July__c</columns>
        <columns>ASI_CRM_August__c</columns>
        <columns>ASI_CRM_September__c</columns>
        <columns>ASI_CRM_October__c</columns>
        <columns>ASI_CRM_November__c</columns>
        <columns>ASI_CRM_December__c</columns>
        <columns>ASI_CRM_January__c</columns>
        <columns>ASI_CRM_February__c</columns>
        <columns>ASI_CRM_March__c</columns>
        <columns>ASI_CRM_April__c</columns>
        <columns>ASI_CRM_May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_WS_Target__c.ASI_CRM_MY_WS_Forecast</value>
        </filters>
        <label>WS_Forecast_MY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WS_Target_MY</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_T2_WS__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_MY_TargetDate__c</columns>
        <columns>ASI_CRM_July__c</columns>
        <columns>ASI_CRM_August__c</columns>
        <columns>ASI_CRM_September__c</columns>
        <columns>ASI_CRM_October__c</columns>
        <columns>ASI_CRM_November__c</columns>
        <columns>ASI_CRM_December__c</columns>
        <columns>ASI_CRM_January__c</columns>
        <columns>ASI_CRM_February__c</columns>
        <columns>ASI_CRM_March__c</columns>
        <columns>ASI_CRM_April__c</columns>
        <columns>ASI_CRM_May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_WS_Target__c.ASI_CRM_MY_WS_Target</value>
        </filters>
        <label>WS_Target_MY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WS_Target_MY_ML5</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_T2_WS__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_MY_TargetDate__c</columns>
        <columns>ASI_CRM_July__c</columns>
        <columns>ASI_CRM_August__c</columns>
        <columns>ASI_CRM_September__c</columns>
        <columns>ASI_CRM_October__c</columns>
        <columns>ASI_CRM_November__c</columns>
        <columns>ASI_CRM_December__c</columns>
        <columns>ASI_CRM_January__c</columns>
        <columns>ASI_CRM_February__c</columns>
        <columns>ASI_CRM_March__c</columns>
        <columns>ASI_CRM_April__c</columns>
        <columns>ASI_CRM_May__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_WS_Target__c.ASI_CRM_MY_WS_Target</value>
        </filters>
        <filters>
            <field>ASI_CRM_Sub_Brand__c</field>
            <operation>contains</operation>
            <value>ML5</value>
        </filters>
        <filters>
            <field>ASI_CRM_MY_TargetDate__c</field>
            <operation>equals</operation>
            <value>7/1/2017</value>
        </filters>
        <label>WS_Target_MY_ML5</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WST-{0000000}</displayFormat>
        <label>Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WS Target</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_WS_Target</fullName>
        <active>true</active>
        <label>CN WS Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_WS_Forecast</fullName>
        <active>true</active>
        <label>MY WS Forecast</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_WS_Target</fullName>
        <active>true</active>
        <label>MY WS Target</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_CRM_CN_Share_To_WS_Manager__c</fullName>
        <label>Share To WS Manager</label>
    </sharingReasons>
</CustomObject>